Fixed Controllers and Finishing
